Fix text alignment in code blocks

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -454,3 +454,7 @@ figure > * {
   display: block;
   text-align: center;
 }
+
+figure.highlight {
+  text-align: left;
+}
